div1 width fixed - too big

--- a/style.css
+++ b/style.css
@@ -439,7 +439,7 @@ footer a{
 }
 
 .div1{
-    width: 100%;
+    width: 95%;
 }
 
 .div2{
